# LEM

./: CMakeLists.txt  LICENSE  README.md
include/: config.h  debugger.h  disassembler.h  gui.h  loader.h  plugin_api.h  utils.h
scripts/: build.sh  format_code.sh  run_tests.sh
src/: main.cpp  menu.cpp  menu.h  window.cpp
src/core/: disassembler.cpp  loader.cpp
src/core/debugger/: gdb_integration.cpp
src/gui/: main_window.cpp  menu.cpp  window.h
src/gui/views/: disassembly_view.cpp  memory_view.cpp
src/plugins/: plugin_manager.cpp
src/plugins/examples/: example_plugin.py
tests/: test_debugger.cpp  test_disassembler.cpp  test_gui.cpp  test_loader.cpp
tests/test_architectures/: test_arm.cpp  test_x86.cpp
